--- a/style.css
+++ b/style.css
@@ -1,3 +1,53 @@
 h1 {
     color: red;
 }
+
+.HO{
+    background-color: lightcoral;
+}
+
+.FE {
+ background-color: aqua;
+}
+
+.FEFS{
+    background-color: bisque;
+}
+
+.AF{
+    background-color: blueviolet;
+
+}
+
+.TNBE{
+    background-color: pink;
+}
+
+.SA{
+    background-color: brown;
+}
+
+.DE1{
+    font-size: 48px;
+    
+}
+
+.DE2{
+    font-size: 48px;
+}
+
+.DE6{
+    font-size: 48px;
+}
+
+.DE3{
+    font-size: 48px;
+}
+
+.DE4{
+    font-size: 48px;
+}
+
+.DE5{
+    font-size: 48px;
+}
